# HacomKTKT

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  HUONG_DAN_SO_SANH_PL01_PL02.md  MODEL_SETUP_OFFLINE.md  OCR_HIGH_ACCURACY.md  PACKAGE_MANIFEST.txt  PROJECT_ARCHITECTURE_AND_PLAN.md  Phan_cong_test_HSDT.xlsx  README.md  VALIDATION_REPORT.md  app.py  cli.py  comparison_engine.py  environment.yml  file_ingester.py  hsmtctl.sh  inspect_categories.py  inspect_categories.txt  inspect_excel.py  inspect_phat_sinh.py  inspect_phat_sinh.txt  inspect_result.txt  inspect_vk.py  inspect_vk.txt  normalizer.py  parse_boq.py  pyproject.toml  report_builder.py  requirements-core.txt  requirements-ocr-cpu.txt  requirements-ocr-gpu.txt  requirements.txt  run_all_tests.py  start_linux.sh  start_windows.bat  test_pipeline.py
5. Tong hop chao gia 11.12.2025/: 0. 2025.12.10 Tong hop Chao gia ME Hacom Mall V2.xlsx  1. 2025.12.08 Chao gia ME Hacom Mall Linh Anh V2.xlsx  2. 2025.12.09 Chao gia ME Hacom Mall Van Lang Tri Trung V2.xlsx  3. 2025.12.08 Chao gia ME Hacom Mall Searefico V2.xlsx  4. 2025.12.08 Chao gia ME Hacom Mall Van Khanh V2.xlsx
core/: __init__.py  annotator.py  anomaly.py  comparison.py  config.py  excel_io.py  excel_reader.py  matcher.py  models.py  number_parser.py  parallel.py  peer_analysis.py  peer_catalogue.py  pipeline.py  pl2_reader.py  reporter.py  tender_package.py  text_normalizer.py
docs/: Kien_Truc_Phase1_Standalone.html
ocr/: config.py  engines.py  exporter.py  grid.py  models.py  orientation.py  pdf_io.py  pipeline.py  schema.py  verify.py
(+33 files in other folders)
